--- a/templates/views/contact.hbs
+++ b/templates/views/contact.hbs
@@ -10,19 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </head>
   <body>
+    
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <h3>Titus Hrangthawng</h3>
-            </div>
-            <div class="col">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Service</a></li>
-                </ul>
-            </div>
-        </div>
+        {{>header}}    
     </div>
 	<script src="app.js"></script>
   </body>
