--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,13 +1,13 @@
-<div class="row">
-            <div class="col">
+<nav class="d-flex  align-items-center bg-primary text-white p-3 m-0">
+            <div class="col-9">
                 
                 <h3>{{title}}</h3>
             </div>
             <div class="col">
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                <ul class="row">
+                    <li class="col"><a class="text-white text-decoration-none" href="/">Home</a></li>
+                    <li class="col"><a class="text-white text-decoration-none" href="/about">About</a></li>
+                    <li class="col"><a class="text-white text-decoration-none" href="/contact">Contact</a></li>
                 </ul>
             </div>
-        </div>
+        </nav>
