--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Titus Technology Portfolio</title>
-    <link rel="stylesheet" href="../../public/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="width:100% height:100%;">
         {{>header}}
+        <div class="container">
+          <div class="row mt-3">
+            <div class="col bg-primary text-white p-3 m-0">
+              <h4>Recruiting Platform</h4>
+            </div>
+            <div class="col bg-primary text-white p-3 m-0">
+              <p>A Recruitment Web Application using Django And Sql</p>
+              <a class="text-white text-decoration-none" href="#">https</a>
+            </div>
+          </div>
+        </div>
     </div>
 	<script src="app.js"></script>
   </body>
