--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,13 +1,10 @@
-<nav class="d-flex  align-items-center bg-primary text-white p-3 m-0">
-            <div class="col-9">
-                
-                <h3>{{title}}</h3>
-            </div>
-            <div class="col">
-                <ul class="row">
-                    <li class="col"><a class="text-white text-decoration-none" href="/">Home</a></li>
-                    <li class="col"><a class="text-white text-decoration-none" href="/about">About</a></li>
-                    <li class="col"><a class="text-white text-decoration-none" href="/contact">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
+<nav class="">
+    <h3>{{title}}</h3>
+    <div class="col">
+        <ul class="row">
+            <li class="col"><a class="text-white text-decoration-none" href="/">Home</a></li>
+            <li class="col"><a class="text-white text-decoration-none" href="/about">About</a></li>
+            <li class="col"><a class="text-white text-decoration-none" href="/contact">Contact</a></li>
+        </ul>
+    </div>
+</nav>
