--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,5 @@
 body {
-    color: red;
-}
-
-.container {
-    
-}
-
-li {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
+    font-family: "Poppins", sans-serif;
+    color: white;
+    margin: 0;
 }
