--- a/templates/views/contact.hbs
+++ b/templates/views/contact.hbs
@@ -6,13 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Titus Technology Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
     
-    <div class="width:100% height:100%;">
-        {{>header}}    
+    <div class="">
+      <header class="header">
+        <h3><a class="header-title" href="">Nile</a></h3>
+        <ul class="header-options">
+            <li class="header-option"><a class="" href="/">Home</a></li>
+            <li class="header-option"><a class="" href="/about">About</a></li>
+            <li class="header-option"><a class="" href="/contact">Contact</a></li>
+        </ul>
+      </header>    
     </div>
 	<script src="app.js"></script>
   </body>
