--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -29,7 +29,7 @@
           <h2 class="main-display-h2-1">Hi I'm</h2>
           <h1>Titus <span>Hrangthawng</span></h1>
           <h2 class="main-display-h2-2" main-display>An Aspiring Web Developer</h2>
-          <a class="view-project-link" href="">View My Project</a>
+          <a class="view-project-link" target="_blank" href="https://nileecommerce-08186ddc098e.herokuapp.com/">View My Project</a>
         </div>
         <div class="main-display-right">
           <img src="/images/profile.png" alt="" width="200px">
@@ -37,15 +37,11 @@
       </div>
 
       <div id="about">
-        <div class="about-left">
-          <img src="/images/profile.png" alt="" width="200px">
-          <img src="/images/profile.png" alt="" width="200px">
-        </div>
         <div class="about-right">
           <p class="about-title">About me</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, repellat
-             minima quidem rerum nemo natus alias nam dolore nisi exercitationem
-              facere consequatur saepe quas, earum atque. Dolor deleniti ex quidem.</p>
+          <p>I am a current student at Kellogg Community College. I am finishing up my third semester currently. I eventually plan on transferring to a university to obtain my 
+            bachelor's in computer science. I am thinking about transferring to either Western Michigan University or Michigan State University.
+          </p>
           <div class="about-container">
             <div class="about-container-container">
               <p class="about-container-container-title" >Name</p>
@@ -53,11 +49,11 @@
             </div>
             <div class="about-container-container">
               <p class="about-container-container-title" >Education</p>
-              <p>TCurrent Student At Kellogg Community College</p>
+              <p>Current Student At Kellogg Community College</p>
             </div>
             <div class="about-container-container">
               <p class="about-container-container-title" >Email</p>
-              <p>Etitushrangthawng@gmail.com</p>
+              <p>titushrangthawng@gmail.com</p>
             </div>
             <div class="about-container-container">
               <p class="about-container-container-title" >Employment</p>
@@ -103,6 +99,18 @@
             <div class="contact-container-container">
               <img src="/images/linkedin.png" alt="" width="75px">
               <a href="https://www.linkedin.com/in/titus-hrangthawng-11996623b" target="_blank" class="contact-link linked-in-profile-link">LinkedIn Profile</a>
+            </div>
+            <div class="contact-container-container">
+              <h3>Phone Number</h3>
+              <p>269-268-3097</p>
+            </div>
+            <div class="contact-container-container">
+              <h3>Email</h3>
+              <p>titushrangthawng@gmail.com</p>
+            </div>
+            <div class="contact-container-container">
+              <h3>Github</h3>
+              <p>Ripsky3</p>
             </div>
         </div>
         
