--- a/public/css/about.css
+++ b/public/css/about.css
@@ -12,7 +12,7 @@
 
 .about-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 500px 500px;
     grid-template-rows: 1fr 1fr;
 }
 
