Updated portfolio with educational updates and link update

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,8 +28,8 @@
         <div class="main-display-left">
           <h2 class="main-display-h2-1">Hi I'm</h2>
           <h1>Titus <span>Hrangthawng</span></h1>
-          <h2 class="main-display-h2-2" main-display>An Aspiring Web Developer</h2>
-          <a class="view-project-link" target="_blank" href="https://nileecommerce-08186ddc098e.herokuapp.com/">View My Project</a>
+          <h2 class="main-display-h2-2" main-display>An Aspiring Software Engineer</h2>
+          <a class="view-project-link" target="_blank" href="https://dromedatabs-284cac28f0bb.herokuapp.com/">View My Project</a>
         </div>
         <div class="main-display-right">
           <img src="/images/profile.png" alt="" width="200px">
@@ -39,8 +39,7 @@
       <div id="about">
         <div class="about-right">
           <p class="about-title">About me</p>
-          <p>I am a current student at Kellogg Community College. I am finishing up my third semester currently. I eventually plan on transferring to a university to obtain my 
-            bachelor's in computer science. I am thinking about transferring to either Western Michigan University or Michigan State University.
+          <p>I am a student at Western Michigan University studying Computer Science. My ultimate aspirations are to become a Software Engineer.
           </p>
           <div class="about-container">
             <div class="about-container-container">
@@ -49,7 +48,7 @@
             </div>
             <div class="about-container-container">
               <p class="about-container-container-title" >Education</p>
-              <p>Current Student At Kellogg Community College</p>
+              <p>Current Sophmore At Western Michigan University</p>
             </div>
             <div class="about-container-container">
               <p class="about-container-container-title" >Email</p>
